# sparkserial

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.sh  setup.sh
sparkserial/: main.py
sparkserial/core/: command_manager.py  serial_manager.py
sparkserial/gui/: main_window.py  styles.py
