[project]
name = "sparkserial"
version = "0.2.0"
description = "A lightweight Serial GUI Tool for hardware testing and debugging. Requires USB-to-Serial driver installation based on your adapter."
authors = [
    { name = "saravanakumar", email = "sarvalece71@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.4.0",
    "pyserial>=3.5",
]
license = "MIT"
keywords = ["serial", "uart", "terminal", "hardware", "debugging", "pyqt6", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Terminals :: Serial",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-cocoa>=9.0"]

[project.scripts]
sparkserial = "sparkserial.main:main"

[tool.setuptools]
packages = ["sparkserial", "sparkserial.core", "sparkserial.gui"]

[tool.setuptools.package-data]
sparkserial = ["assets/*.png"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
